Update: home page style

--- a/index.html
+++ b/index.html
@@ -9,18 +9,25 @@
     </head>
     <body>
         <main>
-            <h1>Pop Planet Team</h1>
-            <p>Olá, seja bem vindo ao nosso site!</p>
-            <p>Estamos em construção, mas em breve teremos novidades!</p>
-            
-            <section id="projects">
-                <h2>Nossos projetos</h2>
-            </section>
+            <div id="info-conteiner">
+                <h1 style="color: #0c2c36;">Pop Planet Team</h1>
+                <p>Olá, seja bem vindo ao nosso site!</p>
+                <p>Estamos em construção, mas em breve teremos novidades!</p>
+                
+                <section id="projects">
+                    <h2>Nossos projetos</h2>
+                    <ul>
+                        <li>
+                            <p><a href="/hells_empty/gdd/index.html" target="_blank">Hell's Empty</a></p>
+                        </li>
+                    </ul>
+                </section>
+            </div>
             <section id="team">
                 <h2>Conheça nosso time</h2>
                 <div id="cardsContainer">
                     <div id="gabrielCard" class="card">
-                        <a href="https://github.com/glbessa">
+                        <a href="https://github.com/glbessa" target="_blank">
                             <img src="https://avatars.githubusercontent.com/u/20001136?v=4" width="100px" height="100px">
                             <div>
                                 <h3>Gabriel Leite Bessa</h3>
@@ -29,7 +36,7 @@
                         </a>
                     </div>
                     <div id="jelsonCard" class="card">
-                        <a href="https://github.com/JelsonRodrigues">
+                        <a href="https://github.com/JelsonRodrigues" target="_blank">
                             <img src="https://avatars.githubusercontent.com/u/88675696?v=4" width="100px" height="100px">
                             <div>
                                 <h3>Jelson Rodrigues</h3>
@@ -38,7 +45,7 @@
                         </a>
                     </div>
                     <div id="viniciusCard" class="card">
-                        <a href="https://github.com/Vinigperuzzi">
+                        <a href="https://github.com/Vinigperuzzi" target="_blank">
                             <img src="https://avatars.githubusercontent.com/u/88754301?v=4" width="100px" height="100px">
                             <div>
                                 <h3>Vinícius Garcia Peruzzi</h3>
@@ -47,7 +54,7 @@
                         </a>
                     </div>
                     <div id="ravilonCard" class="card">
-                        <a href="https://github.com/ravilon">
+                        <a href="https://github.com/ravilon" target="_blank">
                             <img src="https://avatars.githubusercontent.com/u/94138486?v=4" width="100px" height="100px">
                             <div>
                                 <h3>Ravilon Aguiar dos Santos</h3>
