Update main & GDD home

--- a/hells_empty/gdd/Introduction.html
+++ b/hells_empty/gdd/Introduction.html
@@ -11,20 +11,22 @@
         <audio src="../../assets/audio/main_theme.mp3" autoplay></audio>
         <header>
             <h1>Game Design Document</h1>
-            <h2>Table of Contents</h2>
-            <ul>
-                <li><a href="#introduction">Introduction</a></li>
-                <li><a href="#gameplay">Gameplay</a></li>
-                <li><a href="#story">Story</a></li>
-                <li><a href="#characters">Characters</a></li>
-                <li><a href="#enemies">Enemies</a></li>
-                <li><a href="#levels">Levels</a></li>
-                <li><a href="#art">Art</a></li>
-                <li><a href="#audio">Audio</a></li>
-                <li><a href="#controls">Controls</a></li>
-                <li><a href="#credits">Credits</a></li>
-            </ul>
-        </header>
+                <div id="main-content-list">
+                    <h2>Table of Contents</h2>
+                    <ul>
+                        <li><a href="#introduction">Introduction</a></li>
+                        <li><a href="#gameplay">Gameplay</a></li>
+                        <li><a href="#story">Story</a></li>
+                        <li><a href="#characters">Characters</a></li>
+                        <li><a href="#enemies">Enemies</a></li>
+                        <li><a href="#levels">Levels</a></li>
+                        <li><a href="#art">Art</a></li>
+                        <li><a href="#audio">Audio</a></li>
+                        <li><a href="#controls">Controls</a></li>
+                        <li><a href="#credits">Credits</a></li>
+                    </ul>
+                </div>
+            </header>
         <main>
             <section>
                 <h2 id="introduction">Introduction</h2>
