--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <h2>Nossos projetos</h2>
                     <ul>
                         <li>
-                            <p><a href="/hells_empty/gdd/index.html" target="_blank">Hell's Empty</a></p>
+                            <p><a href="/hells_empty/index.html" target="_blank">Hell's Empty</a></p>
                         </li>
                     </ul>
                 </section>
@@ -44,20 +44,20 @@
                             </div>
                         </a>
                     </div>
-                    <div id="viniciusCard" class="card">
-                        <a href="https://github.com/Vinigperuzzi" target="_blank">
-                            <img src="https://avatars.githubusercontent.com/u/88754301?v=4" width="100px" height="100px">
-                            <div>
-                                <h3>Vinícius Garcia Peruzzi</h3>
-                                <p>Game Designer</p>
-                            </div>
-                        </a>
-                    </div>
                     <div id="ravilonCard" class="card">
                         <a href="https://github.com/ravilon" target="_blank">
                             <img src="https://avatars.githubusercontent.com/u/94138486?v=4" width="100px" height="100px">
                             <div>
                                 <h3>Ravilon Aguiar dos Santos</h3>
+                                <p>Game Designer</p>
+                            </div>
+                        </a>
+                    </div>
+                    <div id="viniciusCard" class="card">
+                        <a href="https://github.com/Vinigperuzzi" target="_blank">
+                            <img src="https://avatars.githubusercontent.com/u/88754301?v=4" width="100px" height="100px">
+                            <div>
+                                <h3>Vinícius Garcia Peruzzi</h3>
                                 <p>Game Designer</p>
                             </div>
                         </a>
