--- a/hells_empty/index.html
+++ b/hells_empty/index.html
@@ -3,9 +3,29 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Hell's Empty</title>
+        <title>Hell's Empty | GDD</title>
+        <link rel="stylesheet" href="../../assets/css/global.css">
+        <link rel="stylesheet" href="../../assets/css/gdd.css">
     </head>
     <body>
-
+        <!--audio src="../../assets/audio/main_theme.mp3" autoplay></audio-->
+        <header>
+            <h1>Hell's Empty</h1>
+                <div id="main-content-list">
+                    <h2>Table of Contents</h2>
+                    <ul>
+                        <li><a href="#introduction">Introduction</a></li>
+                        <li><a href="../hells_empty/gdd/gameplay.html">Gameplay</a></li>
+                        <li><a href="#story">Story</a></li>
+                        <li><a href="#characters">Characters</a></li>
+                        <li><a href="#enemies">Enemies</a></li>
+                        <li><a href="#levels">Levels</a></li>
+                        <li><a href="#art">Art</a></li>
+                        <li><a href="#audio">Audio</a></li>
+                        <li><a href="#controls">Controls</a></li>
+                        <li><a href="#credits">Credits</a></li>
+                    </ul>
+                </div>
+            </header>
     </body>
 </html>
