update gameplay page

--- a/hells_empty/gdd/gameplay.html
+++ b/hells_empty/gdd/gameplay.html
@@ -30,62 +30,102 @@
     <main>
         <section id="overview">
             <h2>Visão Geral da Gameplay:</h2>
-            <!-- Conteúdo sobre a visão geral da gameplay -->
+            <p>
+              O estilo do jogo combina elementos dos estilos Hack’n Slash e Shoot’em up. A experiência proporcionada pelo jogo é a de avançar por mapas cada vez maiores e mais cheios de desafios, enfrentando hordas de inimigos em combate corpo a corpo e à longa distância.
+            </p>
         </section>
 
         <section id="objectives">
             <h2>Objetivos do Jogo:</h2>
-            <!-- Conteúdo sobre os objetivos do jogo -->
+            <p>
+              O objetivo principal do jogo como um todo, e que se relaciona diretamente com a narrativa, é a coleta de almas. Na seção sobre a história é possível ver como essa coleta impacta o avanço da história do jogo. As almas são coletadas matando inimigos, os mais fracos concedem menos almas, os mais fortes, mais.
+Para a gameplay, há uma quantidade de almas que devem ser coletadas por fase, permitindo o avanço para outras fases, até que se chegue ao final daquele mundo. Então é possível jogar novamente nesse mundo até que a quantidade de almas permita explorar um novo mundo com fases novas.
+Quando uma certa quantidade de almas é alcançada, é dito na gameplay que o personagem obteve poder suficiente para abrir um portal para a próxima fase, o que de fato acontece no mapa atual. Ao achar esse portal o avanço é imediato para a fase seguinte.
+Ao encerrar a última fase, podendo ou não ter uma batalha contra um chefe, a gameplay é encerrada e o jogador é levado para o menu de seleção de fases e de upgrades.
+Com as almas coletadas ele pode comprar novos poderes, armas, habilidades, e até mesmo novos mundos, com fases novas e inimigos novos.
+Em outras palavras, a gameplay se dará por “runs” feitas pelos jogadores em busca de obter a maior quantidade de almas possível para progredir na melhoria do personagem, ao passo que libera novos lugares para jogar.
+            </p>
         </section>
 
         <section id="enemy-variety">
             <h2>Variedade de Inimigos:</h2>
-            <!-- Conteúdo sobre a variedade de inimigos -->
+            <p>
+              Mais informações sobre os inimigos estão na seção sobre inimigos, mas a variedade afeta a gameplay, pois há inimigos que preferem atacar a longa distância, outras a curta e média. Por isso escolher bem as habilidades desbloqueadas tem tanta importância para a run, pois ela impacta diretamente na qualidade da jogabilidade em determinada fase, pois há fases mais abertas e outras mais fechadas, com mais inimigos de um tipo ou de outro. Conhecer a fase permite escolher as armas e habilidades certas para aquele tipo de desafio.
+O chefe de cada final de mundo também pode possuir uma variedade de habilidades especiais, e, apesar de ser o mesmo chefe dos outros mundos que retornou, ele se molda aos padrões do mundo em que se está explorando, podendo ele ter vantagem contra o jogador ou o contrário, caso o mundo seja bem explorado.
+
+            </p>
         </section>
 
         <section id="maps-environments">
             <h2>Mapas e Ambientes:</h2>
-            <!-- Conteúdo sobre os mapas e ambientes -->
+            <p>
+              Os ambientes são estruturados de acordo com o mundo em que se está explorando. Mais sobre os ambientes estão na seção do mundo. Mas pode-se citar alguns exemplos de como isso afeta o gameplay.
+Um mundo que seja composto por muitas paredes, sendo majoritariamente masmorras, cavernas e túneis, ofereceram perigos como armadilhas no chão e nas paredes que exijam a percepção do jogador e terão inimigos que tenham o comportamento de se aglomerar em bando e causem ataque de perto, portanto escolher habilidades e armas de curto alcance mas de grande dano pode ser mais inteligente.
+Outros mundos podem ser compostos por planícies verdejantes longas e vastas. Nesse caso não há tantos perigos na fase, mas permite com que inimigos ataquem à longa distância ao passo que outros se acumulem em torno do jogador. Então uma proposta mais equilibrada pode ser mais inteligente, tendo tanto habilidades de curto alcance, como armas lentas, mas com ataques mais precisos a longa distância.
+O meio termo seriam fases longas e com paredes, onde os inimigos não seriam capazes de se acumular em torno, restando apenas ataques que permitam longo alcance.
+            </p>
         </section>
 
         <section id="melee-ranged-combat">
             <h2>Combate Corpo a Corpo e à Longa Distância:</h2>
-            <!-- Conteúdo sobre o combate corpo a corpo e à longa distância -->
+            <p>
+              Quando os inimigos se aglomeram em volta do jogador, é possível atacar com os golpes corpo a corpo, que vão desde golpes com soqueiras até ataques em área com martelos de guerra e machados. Isso claro, sem mencionar as habilidades selecionadas que podem ir desde invocar monstros para ajudar na batalha até exterminar inimigos em um raio próximo do jogador. Mas mais informações sobre habilidades e armas estão na seção de mecânicas.
+            </p>
         </section>
 
         <section id="player-progression">
             <h2>Progressão do Jogador:</h2>
-            <!-- Conteúdo sobre a progressão do jogador -->
+            <p>
+              Como já mencionado, a progressão do jogador se dá em torno de sua base, onde ele pode comprar novas habilidades, algumas necessárias para o avanço, e a compra de portais que permitam acessar outros mundos, o que permite coletar os requisitos necessários para avançar para o fim de jogo.
+A cada mundo finalizado, a alma do chefe é coletada, e ao conquistar certa quantidade dessa alma especial, permite avançar para o último mundo, que leva o jogador ao fim do jogo.
+            </p>
         </section>
 
         <section id="challenges">
             <h2>Desafios Crescentes:</h2>
-            <!-- Conteúdo sobre os desafios crescentes -->
+            <p>
+              A dificuldade de cada fase se dará na quantidade e variedade de inimigos nas fases, bem como na quantidade de armadilhas no chão.
+Cada fase é maior que a anterior, mais complexa, possui o portal final mais escondido e possui mais inimigos que explorem as vantagens da fase em questão.
+            </p>
         </section>
 
         <section id="rewards-achievements">
             <h2>Recompensas e Conquistas:</h2>
-            <!-- Conteúdo sobre as recompensas e conquistas -->
+            <p>
+              As conquistas são majoritariamente obtidas via compra pelo menu da base do jogador, entretanto algumas conquistas especiais podem ser obtidas via achievements.
+Por exemplo, habilidades e armas especiais (muito mais fortes do que as padrão) podem ser obtidas via conquistas. Por exemplo, mate uma quantidade de certo inimigo, ou caminhe mais de uma quantidade de passos. Essas conquistas liberaram habilidades referentes e condizentes às conquistas. Por exemplo, a de dar um certo número de passos aumenta a velocidade do jogador permanentemente.
+Outras recompensas que serão obtidas por atingir essas conquistas especiais serão skins novas que não chegam a impactar diretamente na gameplay, mas mudam o visual do jogador e do mundo.
+            </p>
         </section>
 
         <section id="phase-challenges">
             <h2>Desafios de Fases:</h2>
-            <!-- Conteúdo sobre os desafios de fases -->
+            <p>
+              Alguns desafios das fases podem conter a necessidade de achar chaves para abrir portas no mapa, ou desviar de armadilhas estrategicamente posicionadas para impedir o avanço do jogador, além de passagens invisíveis ou difíceis de encontrar.
+Algumas fases podem estar com condições especiais, como neve, o que torna o chão escorregadio, dificultando a movimentação do personagem, ou ainda exigir que o jogador termine a fase antes de certo tempo, devido a alguma urgência justificada pela história, como um terremoto, ou desabamento de caverna.
+            </p>
         </section>
 
         <section id="portal-progression">
             <h2>Portal e Progressão:</h2>
-            <!-- Conteúdo sobre o portal e a progressão -->
+            <p>
+              Quando um portal é atingido ele leva à próxima fase, sem possibilidade de voltar para a fase anterior. O último portal leva de volta à base do jogador, onde ele pode escolher seus equipamentos e habilidades, comprar itens e portais novos e escolher, através de portais novas ou as mesmas fases. 
+            </p>
         </section>
 
         <section id="replayability">
             <h2>Rejogabilidade:</h2>
-            <!-- Conteúdo sobre a rejogabilidade -->
+            <p>
+              Deseja-se que o jogo seja altamente rejogável, mas que não seja chato ou repetitivo para o jogador, por isso procura-se a abordagem de uma geração procedural de mapas e desafios. Fazendo com que cada “run” seja única desafiadora.
+É importante ressaltar que a rejogabilidade é incentivada via coleta de almas, uma vez que se conhece as características de certa fase, se torna mais fácil conquistar almas nela, e portanto é mais vantajoso ficar retornando a ela. Por isso a importância das fases não serem repetitivas.
+            </p>
         </section>
 
         <section id="average-play-time">
             <h2>Tempo Médio de Jogo:</h2>
-            <!-- Conteúdo sobre o tempo médio de jogo -->
+            <p>
+              Como o jogo é planejado para ser altamente rejogável, cada “run” é projetada para possuir em torno de 20 a 30 minutos de jogo, divididos em ordem progressiva pelas fases. Por exemplo, no primeiro mundo é possível completar as 5 fases com 2 minutos, 3 minutos, 5 minutos, 8 minutos e 4 minutos (chefe). Esse valor surge da observação de outros jogos que possuem essa característica de “run”, como por exemplo os mercenários da série de jogos “Resident Evil”, ou “O rei das pradarias” do “Stardew Valley”, ou ainda as fases de “The Binding of Isaac” e outros jogos do tipo.
+            </p>
         </section>
     </main>
 </body>
