Co-authored-by: gabrielleitebessa@gmail.com <gabrielleitebessa@gmail.com> Co-authored-by: Jelson Stoelben Rodrigues <JelsonRodrigues@users.noreply.github.com>

--- a/hells_empty/index.html
+++ b/hells_empty/index.html
@@ -11,21 +11,26 @@
         <!--audio src="../../assets/audio/main_theme.mp3" autoplay></audio-->
         <header>
             <h1>Hell's Empty</h1>
-                <div id="main-content-list">
-                    <h2>Table of Contents</h2>
-                    <ul>
-                        <li><a href="#introduction">Introduction</a></li>
-                        <li><a href="../hells_empty/gdd/gameplay.html">Gameplay</a></li>
-                        <li><a href="#story">Story</a></li>
-                        <li><a href="#characters">Characters</a></li>
-                        <li><a href="#enemies">Enemies</a></li>
-                        <li><a href="#levels">Levels</a></li>
-                        <li><a href="#art">Art</a></li>
-                        <li><a href="#audio">Audio</a></li>
-                        <li><a href="#controls">Controls</a></li>
-                        <li><a href="#credits">Credits</a></li>
-                    </ul>
-                </div>
-            </header>
+            <div id="main-content-list">
+                <h2>Table of Contents</h2>
+                <ul>
+                    <li><a href="#introduction">Introduction</a></li>
+                    <li><a href="./gdd/gameplay.html">Gameplay</a></li>
+                    <li><a href="./gdd/story.html">Story</a></li>
+                    <li><a href="./gdd/characters.html">Characters</a></li>
+                    <li><a href="./gdd/enemies.html">Enemies</a></li>
+                    <li><a href="./gdd/levels.html">Levels</a></li>
+                    <!-- <li><a href="./gdd/art.html">Art</a></li> -->
+                    <!-- <li><a href="./gdd/controls.html">Controls</a></li> -->
+                    <li><a href="./gdd/credits.html">Credits</a></li>
+                    <li><a href="./gdd/downloads.html">Downloads</a></li>
+                </ul>
+            </div>
+        </header>
+        <main>
+            <section id="introduction">
+                <!-- intro -->
+            </section>
+        </main>
     </body>
 </html>
