--- a/hells_empty/gdd/characters.html
+++ b/hells_empty/gdd/characters.html
@@ -40,6 +40,16 @@
             </p>
         </section>
 
+        <section id="ploto">
+          <h2>Ploto</h2>
+          <img src="../../assets/imgs/devil/ploto.png" width="150px">
+          <p>
+            Descrição: Ploto é um lacaio infernal. Ele é um dos subordinados diretos do Devil. Ajuda na gestão do inferno e às vezes dá boas ideias para ele.
+            <br>
+            Personalidade: O Ploto não é maligno, mas tem a maldade como padrão. Dessa forma ele pode sugerir situações de pura maldade simplesmente por não ver nada de mal nisso, e não por querer de fato ver sofrimento. É meio bobo, não muito esperto, mas leal seguidor do Devil.
+          </p>
+      </section>
+
         <section id="luna">
           <h2>Luna</h2>
           <img src="../../assets/imgs/enemies/enemy_0.png" width="150px">
