Camera and controls

--- a/hells_empty/index.html
+++ b/hells_empty/index.html
@@ -8,7 +8,6 @@
         <link rel="stylesheet" href="../../assets/css/gdd.css">
     </head>
     <body>
-        <!--audio src="../../assets/audio/main_theme.mp3" autoplay></audio-->
         <header>
             <h1>Hell's Empty</h1>
             <div id="main-content-list">
@@ -20,8 +19,8 @@
                     <li><a href="./gdd/characters.html">Characters</a></li>
                     <li><a href="./gdd/enemies.html">Enemies</a></li>
                     <li><a href="./gdd/levels.html">Levels</a></li>
-                    <!-- <li><a href="./gdd/art.html">Art</a></li> -->
-                    <!-- <li><a href="./gdd/controls.html">Controls</a></li> -->
+                    <li><a href="./gdd/art.html">Art</a></li>
+                    <li><a href="./gdd/controls.html">Controls</a></li>
                     <li><a href="./gdd/credits.html">Credits</a></li>
                     <li><a href="./gdd/downloads.html">Downloads</a></li>
                 </ul>
