--- a/hells_empty/index.html
+++ b/hells_empty/index.html
@@ -17,9 +17,9 @@
                     <li><a href="./gdd/gameplay.html">Gameplay</a></li>
                     <li><a href="./gdd/story.html">Story</a></li>
                     <li><a href="./gdd/characters.html">Characters</a></li>
-                    <li><a href="./gdd/enemies.html">Enemies</a></li>
-                    <li><a href="./gdd/levels.html">Levels</a></li>
-                    <li><a href="./gdd/art.html">Art</a></li>
+                    <!--<li><a href="./gdd/enemies.html">Enemies</a></li>-->
+                    <!--<li><a href="./gdd/levels.html">Levels</a></li>-->
+                    <!--<li><a href="./gdd/art.html">Art</a></li>-->
                     <li><a href="./gdd/controls.html">Controls</a></li>
                     <li><a href="./gdd/credits.html">Credits</a></li>
                     <li><a href="./gdd/downloads.html">Downloads</a></li>
