--- a/hells_empty/gdd/controls.html
+++ b/hells_empty/gdd/controls.html
@@ -13,21 +13,22 @@
         </header>
         <main>
             <section id="introduction">
-                O jogo procura se manter frenético para o jogador, então os controles devem ser simples, focando na movimentação rápida, bem definida, suave e de fácil acesso aos botões de ação.
-Como não há qualquer interação com o mapa, como abrir portas, desativar armadilhas ou coisas do tipo, bastam os botões de movimentação, esquiva, defesa e o foco pode se manter nos botões de ação.
-Com uma combinação de teclas pode-se chegar ao objetivo de manter a jogabilidade frenética. Por exemplo.
-Pode chegar ao ponto de que o jogador tenha obtido acesso a manter 6 habilidades ativas e 6 armas diferentes.
-Para que seja fluido, frenético e rápido o jogador deve ter todos os botões ao alcance com um comando e não ficar selecionando armas e habilidades em menus ou outros selecionáveis.
-Para isso pode-se fazer uma combinação de teclas:
-Clique com o botão direito do mouse dispara a arma 1
-Clique com o botão esquerdo do mouse dispara a habilidade 1
-Clicando com o shift pressionado consegue-se acesso à arma e à habilidade 2
-Com CTRL, obtêm-se acesso à arma e à habilidade 3
-Com Alt, conjunto 4
-Com shift + Alt, conjunto 5
-Com CTRL + alt conjunto 6
-Algo semelhante pode ser alcançado com os gatilhos de controles tanto genéricos, como de consoles específicos.
-
+                <p>O jogo procura se manter frenético para o jogador, então os controles devem ser simples, focando na movimentação rápida, bem definida, suave e de fácil acesso aos botões de ação.</p>
+                <p>Como não há qualquer interação com o mapa, como abrir portas, desativar armadilhas ou coisas do tipo, bastam os botões de movimentação, esquiva, defesa e o foco pode se manter nos botões de ação.</p>
+                <p>Com uma combinação de teclas pode-se chegar ao objetivo de manter a jogabilidade frenética. Por exemplo.</p>
+                <p>Pode chegar ao ponto de que o jogador tenha obtido acesso a manter 6 habilidades ativas e 6 armas diferentes.</p>
+                <p>Para que seja fluido, frenético e rápido o jogador deve ter todos os botões ao alcance com um comando e não ficar selecionando armas e habilidades em menus ou outros selecionáveis.</p>
+                <p>Para isso pode-se fazer uma combinação de teclas:</p>
+                <ul>
+                    <li>Clique com o botão direito do mouse dispara a arma 1</li>
+                    <li>Clique com o botão esquerdo do mouse dispara a habilidade 1</li>
+                    <li>Clicando com o shift pressionado consegue-se acesso à arma e à habilidade 2</li>
+                    <li>Com CTRL, obtêm-se acesso à arma e à habilidade 3</li>
+                    <li>Com Alt, conjunto 4</li>
+                    <li>Com shift + Alt, conjunto 5</li>
+                    <li>Com CTRL + alt conjunto 6</li>
+                </ul>
+                <p>Algo semelhante pode ser alcançado com os gatilhos de controles tanto genéricos, como de consoles específicos.</p>
             </section>
         </main>
     </body>
