UPDATE: back to home link

--- a/hells_empty/gdd/characters.html
+++ b/hells_empty/gdd/characters.html
@@ -18,6 +18,7 @@
                 <li><a href="#furz">Furz, o Guardião da Floresta</a></li>
                 <li><a href="#pompom">Pompom, o Encantador das Nuvens</a></li>
                 <li><a href="#rufus">Rufus, o Guardião das Profundezas</a></li>
+                <li><a href="../index.html">BACK TO HOME</a></li>
             </ul>
         </nav>
     </header>
