--- a/hells_empty/gdd/credits.html
+++ b/hells_empty/gdd/credits.html
@@ -11,6 +11,9 @@
         <!--audio src="../../assets/audio/main_theme.mp3" autoplay></audio-->
         <header>
             <h1>Wiki Credits</h1>
+            <ul>
+                <li><a href="../index.html">BACK TO HOME</a></li>
+            </ul>
         </header>
         <main>
             <section id="introduction">
