--- a/hells_empty/gdd/downloads.html
+++ b/hells_empty/gdd/downloads.html
@@ -15,6 +15,9 @@
       <a href="../../assets/builds/Hell's_Empty(win_version).zip" download="Hell's_Empty(win_version).zip"><p class="button-download">Windows</p></a>
       <a href="../../assets/builds/Hell's_Empty(unix_version).zip" download="Hell's_Empty(unix_version).zip"><p class="button-download">Linux</p></a>
     </div>
+    <div style="display: flex; width: 100vw; justify-content: center; align-items: center;">
+      <p><a href="../index.html">BACK TO HOME</a></p>
+    </div>
   </main>
 </body>
 </html>
