--- a/hells_empty/gdd/enemies.html
+++ b/hells_empty/gdd/enemies.html
@@ -18,6 +18,7 @@
                     <li><a href="#attacks">Ataques</a></li>
                     <li><a href="#types">Tipos</a></li>
                     <li><a href="#difficult">Dificuldade</a></li>
+                    <li><a href="../index.html">BACK TO HOME</a></li>
                 </ul>
             </div>
         </header>
