--- a/hells_empty/gdd/gameplay.html
+++ b/hells_empty/gdd/gameplay.html
@@ -23,6 +23,7 @@
                 <li><a href="#portal-progression">Portal e Progressão</a></li>
                 <li><a href="#replayability">Rejogabilidade</a></li>
                 <li><a href="#average-play-time">Tempo Médio de Jogo</a></li>
+                <li><a href="../index.html">BACK TO HOME</a></li>
             </ul>
         </nav>
     </header>
