--- a/hells_empty/gdd/controls.html
+++ b/hells_empty/gdd/controls.html
@@ -24,6 +24,7 @@
                     <li><a href="./gdd/controls.html">Controls</a></li>
                     <li><a href="./gdd/credits.html">Credits</a></li>
                     <li><a href="./gdd/downloads.html">Downloads</a></li>
+                    <li><a href="../index.html">BACK TO HOME</a></li>
                 </ul>
             </div>
         </header>
