--- a/hells_empty/gdd/levels.html
+++ b/hells_empty/gdd/levels.html
@@ -16,6 +16,7 @@
                     <li><a href="#motivation">Motivação</a></li>
                     <li><a href="#story">História</a></li>
                     <li><a href="#attacks">Ataques</a></li>
+                    <li><a href="../index.html">BACK TO HOME</a></li>
                 </ul>
             </div>
         </header>
