--- a/hells_empty/gdd/story.html
+++ b/hells_empty/gdd/story.html
@@ -13,6 +13,7 @@
             <ul>
                 <li><a href="#overview">Visão Geral da História</a></li>
                 <li><a href="#narrative">Enredo</a></li>
+                <li><a href="../index.html">BACK TO HOME</a></li>
             </ul>
         </nav>
     </header>
