Update list style & back to home in controls

--- a/hells_empty/gdd/controls.html
+++ b/hells_empty/gdd/controls.html
@@ -30,6 +30,9 @@
                 </ul>
                 <p>Algo semelhante pode ser alcançado com os gatilhos de controles tanto genéricos, como de consoles específicos.</p>
             </section>
+            <div style="display: flex; width: 100vw; justify-content: center; align-items: center;">
+                <p><a href="../index.html">BACK TO HOME</a></p>
+            </div>
         </main>
     </body>
 </html>
