update: demo do demo

--- a/hells_empty/gdd/downloads.html
+++ b/hells_empty/gdd/downloads.html
@@ -9,6 +9,7 @@
 <body>
   <header>
     <h1>Downloads</h1>
+    <h2>Baixe a demo do demo</h2>
   </header>
   <main>
     <div id="download-conteiner">
